Report Button now on post scene - storyboard

--- a/SustainabilityAppV1/Base.lproj/Main.storyboard
+++ b/SustainabilityAppV1/Base.lproj/Main.storyboard
@@ -1511,7 +1511,7 @@ To the extent permitted by law, (1) we make no promise as to ZZ, its completenes
                     </navigationBar>
                     <nil name="viewControllers"/>
                     <connections>
-                        <segue destination="eeB-jp-K1q" kind="relationship" relationship="rootViewController" id="bGy-6a-HDX"/>
+                        <segue destination="TbU-JY-e6d" kind="relationship" relationship="rootViewController" id="GSC-Uf-7Fr"/>
                     </connections>
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="J6e-YZ-3fW" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -2983,7 +2983,7 @@ To the extent permitted by law, (1) we make no promise as to ZZ, its completenes
                                 <action selector="done:" destination="TbU-JY-e6d" id="dHX-4Q-nmg"/>
                             </connections>
                         </barButtonItem>
-                        <barButtonItem key="rightBarButtonItem" id="IRN-b2-bA9">
+                        <barButtonItem key="rightBarButtonItem" title="Report" id="IRN-b2-bA9">
                             <color key="tintColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                             <connections>
                                 <action selector="reportPost:" destination="TbU-JY-e6d" id="OaQ-Id-m01"/>
